# ae-datastore-schemas

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/ae_datastore_schemas/jsonschemas/: root.json
src/ae_datastore_schemas/jsonschemas/common/geo/: geo.json
src/ae_datastore_schemas/jsonschemas/domain/: root.json
src/ae_datastore_schemas/jsonschemas/domain/common/geo/: geo.json
src/ae_datastore_schemas/jsonschemas/domain/product/: product.json
src/ae_datastore_schemas/jsonschemas/product/: product.json
