[project]
name = "ae-datastore-schemas"
version = "0.1"

[project.optional-dependencies]
dev = ["pytest", "coverage",
       "sphinx", "pip-tools", "ruff", "pylint"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.coverage.run]
branch = true