[project]
name = "ae-datastore-schemas"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "coverage",
       "sphinx", "pip-tools", "ruff", "pylint"]

[project.entry-points."invenio_jsonschemas.schemas"]
ae_datastore_schema = "ae_datastore_schemas.jsonschemas"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ae_datastore_schemas.__version__"}

[tool.coverage.run]
branch = true